tests/fixtures/invalid/pow_bool_bytes_bytes.py
# Cannot call pow() with Bool, Bytes, Bytes
x = pow(True, b"hello", b"hello")
